add to git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,10 @@
 /ChartMaster/Properties
 /ChartMaster/obj/Release/net6.0
 /ChartMaster/obj
+/.vs/ProjectEvaluation/chartmaster.metadata.v5.2
+/.vs/ProjectEvaluation/chartmaster.projects.v5.2
+/.vs/ChartMaster/DesignTimeBuild/.dtbcache.v2
+/.vs/ChartMaster/FileContentIndex/48569b4c-d812-4f76-b1bc-6f8537c1d17d.vsidx
+/.vs/ChartMaster/FileContentIndex/336d066e-9c83-4982-a2f3-c15a37229622.vsidx
+/.vs/ChartMaster/FileContentIndex/20f554e6-c93e-4cc0-b719-c8f2e40c1881.vsidx
+/.vs/ChartMaster/v17/.suo
